--- a/suggestions/Dockerfile
+++ b/suggestions/Dockerfile
@@ -5,10 +5,10 @@ FROM python:3.11
 WORKDIR /app
 
 # Copy the requirements file to the working directory
-COPY ./suggestion_system/requirements.txt .
+COPY ./suggestions/requirements.txt .
 
 # Install the Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Set the command to run the application using hotreload (for development)
-CMD python utils/other/hotreload.py "suggestion_system/src/app.py"
+CMD python utils/other/hotreload.py "suggestions/src/app.py"
