--- a/order_queue/Dockerfile
+++ b/order_queue/Dockerfile
@@ -1,15 +1,18 @@
 # Use an official Python runtime as the base image
 FROM python:3.11
 
-# Set the working directory in the container
-# Both the utils and src folders will be mounted as volumes, please see docker-compose.yaml
 WORKDIR /app
 
-# Copy the requirements file to the working directory
+# Copy the requirements file and install dependencies
 COPY ./order_queue/requirements.txt .
-
-# Install the Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Set the command to run the container
-CMD python utils/other/hotreload.py "order_queue/src/app.py"
+# Copy your application source code
+COPY ./order_queue/src/ /app/order_queue/src/
+
+# Copy generated proto stubs from utils into the image
+COPY ./utils/pb/order_queue/order_queue_pb2.py /app/order_queue_pb2.py
+COPY ./utils/pb/order_queue/order_queue_pb2_grpc.py /app/order_queue_pb2_grpc.py
+
+# Run the Order Queue application directly
+CMD ["python", "order_queue/src/app.py"]
