--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -102,8 +102,9 @@ services:
       - ORDER_QUEUE_HOST=order_queue
       - ORDER_QUEUE_PORT=50051
       - PYTHONUNBUFFERED=TRUE
-      - PYTHONPATH=/app
+      - PYTHONPATH=/app:/app/utils/pb/books_database:/app/utils/pb/payment
       - BOOKS_DB_PRIMARY_ADDR=books_database_1:50060
+      - PAYMENT_ADDR=payment:50061
     volumes:
       - ./utils:/app/utils
       - ./order_executor/src:/app/order_executor/src
@@ -112,6 +113,7 @@ services:
       - books_database_1
       - books_database_2
       - books_database_3
+      - payment
     command: python order_executor/src/app.py
 
   order_executor_2:
@@ -126,8 +128,9 @@ services:
       - ORDER_QUEUE_HOST=order_queue
       - ORDER_QUEUE_PORT=50051
       - PYTHONUNBUFFERED=TRUE
-      - PYTHONPATH=/app
+      - PYTHONPATH=/app:/app/utils/pb/books_database:/app/utils/pb/payment
       - BOOKS_DB_PRIMARY_ADDR=books_database_1:50060
+      - PAYMENT_ADDR=payment:50061
     volumes:
       - ./utils:/app/utils
       - ./order_executor/src:/app/order_executor/src
@@ -136,6 +139,7 @@ services:
       - books_database_1
       - books_database_2
       - books_database_3
+      - payment
     command: python order_executor/src/app.py
 
   order_executor_3:
@@ -150,8 +154,9 @@ services:
       - ORDER_QUEUE_HOST=order_queue
       - ORDER_QUEUE_PORT=50051
       - PYTHONUNBUFFERED=TRUE
-      - PYTHONPATH=/app
+      - PYTHONPATH=/app:/app/utils/pb/books_database:/app/utils/pb/payment
       - BOOKS_DB_PRIMARY_ADDR=books_database_1:50060
+      - PAYMENT_ADDR=payment:50061
     volumes:
       - ./utils:/app/utils
       - ./order_executor/src:/app/order_executor/src
@@ -160,6 +165,7 @@ services:
       - books_database_1
       - books_database_2
       - books_database_3
+      - payment
     command: python order_executor/src/app.py
 
   books_database_1:
@@ -172,7 +178,7 @@ services:
       - "50055:50060"
     environment:
       - PYTHONUNBUFFERED=TRUE
-      - PYTHONPATH=/app
+      - PYTHONPATH=/app:/app/utils/pb/books_database
       - REPLICA_ID=books_database_1
       - PRIMARY_ID=books_database_1
       - REPLICA_PORT=50060
@@ -192,7 +198,7 @@ services:
       - "50056:50060"
     environment:
       - PYTHONUNBUFFERED=TRUE
-      - PYTHONPATH=/app
+      - PYTHONPATH=/app:/app/utils/pb/books_database
       - REPLICA_ID=books_database_2
       - PRIMARY_ID=books_database_1
       - REPLICA_PORT=50060
@@ -214,7 +220,7 @@ services:
       - "50057:50060"
     environment:
       - PYTHONUNBUFFERED=TRUE
-      - PYTHONPATH=/app
+      - PYTHONPATH=/app:/app/utils/pb/books_database
       - REPLICA_ID=books_database_3
       - PRIMARY_ID=books_database_1
       - REPLICA_PORT=50060
@@ -225,3 +231,20 @@ services:
     depends_on:
       - books_database_1
     command: python books_database/src/app.py
+
+  payment:
+    build:
+      context: .
+      dockerfile: ./payment/Dockerfile
+    container_name: payment
+    hostname: payment
+    # no ports exposed
+    environment:
+      - PYTHONUNBUFFERED=TRUE
+      - PAYMENT_PORT=50061
+      - PYTHONPATH=/app
+    volumes:
+      - ./utils:/app/utils
+      - ./payment/src:/app/payment/src
+      - ./utils/pb/payment:/app/utils/pb/payment
+    command: python payment/src/app.py
