--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -248,3 +248,12 @@ services:
       - ./payment/src:/app/payment/src
       - ./utils/pb/payment:/app/utils/pb/payment
     command: python payment/src/app.py
+  observability:
+        image: grafana/otel-lgtm
+        ports:
+          - "3000:3000"
+          - "4317:4317"
+          - "4318:4318"
+          - "9090:9090"
+        environment:
+          - OTEL_METRIC_EXPORT_INTERVAL=1000
