--- a/orchestrator/requirements.txt
+++ b/orchestrator/requirements.txt
@@ -11,3 +11,8 @@ Werkzeug==3.0.1
 Flask-CORS==4.0.0
 watchdog==6.0.0
 requests==2.28.2
+opentelemetry-api>=1.24.0
+opentelemetry-sdk>=1.24.0
+opentelemetry-exporter-otlp>=1.24.0
+opentelemetry-instrumentation>=0.45b0
+opentelemetry.exporter.otlp.proto.http
